chore(swagger): Change swagger 200 status response to generic type
